Change macOS job setup
Shouldn't need to run on different runners now?

--- a/.github/workflows/create-artifacts.yml
+++ b/.github/workflows/create-artifacts.yml
@@ -141,12 +141,7 @@ jobs:
   create-macos-artifacts:
     name: Create macOS artifacts
     if: ${{ github.event_name == 'workflow_dispatch' && inputs.macos == true || github.event_name == 'push' }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: true
-      matrix:
-        os: [ "macos-14", "macos-13" ]
+    runs-on: macos-14
 
     steps:
       - name: Checkout repository
@@ -159,20 +154,13 @@ jobs:
         with:
           toolchain: nightly
 
-      - name: Install targets (macOS - x64)
-        if: ${{ matrix.os == 'macos-13' }}
+      - name: Install targets
         shell: bash
         run: |
           rustup target add x86_64-apple-darwin;
-
-      - name: Install targets (macOS - arm64)
-        if: ${{ matrix.os == 'macos-14' }}
-        shell: bash
-        run: |
           rustup target add aarch64-apple-darwin;
 
-      - name: Build (macOS - x64)
-        if: ${{ matrix.os == 'macos-13' }}
+      - name: Build
         shell: bash
         env:
           FEDIPROTOSYNC_INCLUDE_COMMIT_HASH: "true"
@@ -181,20 +169,11 @@ jobs:
           cargo build --release --target "x86_64-apple-darwin";
           mkdir -p "${{ github.workspace }}/artifacts/macos_amd64";
           cp "${{ github.workspace }}/target/x86_64-apple-darwin/release/fediproto-sync" "${{ github.workspace }}/artifacts/macos_amd64/fediproto-sync";
-
-      - name: Build (macOS - arm64)
-        if: ${{ matrix.os == 'macos-14' }}
-        shell: bash
-        env:
-          FEDIPROTOSYNC_INCLUDE_COMMIT_HASH: "true"
-          FEDIPROTOSYNC_UPDATE_MANIFEST_VERSION: "true"
-        run: |
           cargo build --release --target "aarch64-apple-darwin";
           mkdir -p "${{ github.workspace }}/artifacts/macos_arm64";
           cp "${{ github.workspace }}/target/aarch64-apple-darwin/release/fediproto-sync" "${{ github.workspace }}/artifacts/macos_arm64/fediproto-sync";
 
       - name: Create artifact (macOS - x64)
-        if: ${{ matrix.os == 'macos-13' }}
         uses: actions/upload-artifact@v4
         with:
           name: "fediproto-sync_macos-amd64_${{ github.ref_type == 'tag' && github.ref_name || github.sha }}"
@@ -202,7 +181,6 @@ jobs:
           if-no-files-found: error
 
       - name: Create artifact (macOS - arm64)
-        if: ${{ matrix.os == 'macos-14' }}
         uses: actions/upload-artifact@v4
         with:
           name: "fediproto-sync_macos-arm64_${{ github.ref_type == 'tag' && github.ref_name || github.sha }}"
