--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -9,8 +9,16 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
-openssl = "0.10.68"
 thiserror = "2.0.10"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+openssl = { version = "0.10.68" }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+openssl = { version = "0.10.68", features = ["vendored"] }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+openssl = { version = "0.10.68", features = ["vendored"] }
 
 [build-dependencies]
 fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
