Switch to 2024 edition
Also define edition at the workspace level

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ package.homepage = "https://github.com/Smalls1652/fediproto-sync"
 package.repository = "https://github.com/Smalls1652/fediproto-sync"
 package.license = "MIT"
 package.license-file = "LICENSE"
+package.edition = "2024"
 
 [profile.release]
 opt-level = "s"
