--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "fediproto-sync"
 version = "0.1.0"
-edition = "2021"
 description = "A daemon for syncing Mastodon posts to BlueSky automatically."
+edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
