--- a/fediproto-sync-build-macros/Cargo.toml
+++ b/fediproto-sync-build-macros/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "fediproto-sync-build-macros"
 version = "0.1.0"
-edition = "2021"
 description = "Shared build script functions for fediproto-sync packages."
+edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
