--- a/fediproto-sync-db/Cargo.toml
+++ b/fediproto-sync-db/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "fediproto-sync-db"
 version = "0.1.0"
-edition = "2021"
 description = "Library for fediproto-sync database operations and models."
+edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
