--- a/fediproto-sync-auth-ui/Cargo.toml
+++ b/fediproto-sync-auth-ui/Cargo.toml
@@ -34,3 +34,6 @@ tracing = "0.1.41"
 
 [build-dependencies]
 fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
+
+[package.metadata.cargo-machete]
+ignored = ["fediproto-sync-build-macros"]
