--- a/fediproto-sync-db/Cargo.toml
+++ b/fediproto-sync-db/Cargo.toml
@@ -49,3 +49,6 @@ local_dev = []
 
 [build-dependencies]
 fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
+
+[package.metadata.cargo-machete]
+ignored = ["fediproto-sync-build-macros", "libsqlite3-sys", "pq-sys"]
