--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -34,7 +34,9 @@ fediproto-sync-lib = { path = "../fediproto-sync-lib" }
 image = "0.25.5"
 ipld-core = "0.4.1"
 megalodon = "0.15.0"
+once_cell = "1.20.2"
 rand = "0.8.5"
+regex = { version = "1.11.1", features = ["std"] }
 reqwest = { version = "0.12.12", features = [
     "json",
     "rustls-tls",
