Update build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,7 @@ jobs:
   build:
     name: Build project
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        package_name: [
-          "fediproto-sync",
-        ]
+
     env:
       CARGO_TERM_COLOR: always
     
@@ -30,6 +25,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install dev libraries
+        shell: bash
         run: |
           sudo apt-get install -y libpq-dev libpq5 libsqlite3-dev libsqlite3-0
 
@@ -39,5 +35,12 @@ jobs:
           toolchain: nightly
           rustflags: ""
 
+      - name: Install cargo-make
+        shell: bash
+        run: | 
+          cargo install --force cargo-make
+
       - name: Build project
-        run: cargo build --package ${{ matrix.package_name }} --verbose
+        shell: bash
+        run: |
+          cargo make build-fediproto-sync
