--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,4 +1,5 @@
 env_scripts = [
+# Parse and set 'BUILD_TARGET' environment variable.
 '''
 #!@duckscript
 
@@ -10,6 +11,7 @@ end
 
 set_env BUILD_TARGET ${input_target}
 ''',
+# Parse and set 'CONTAINER_BUILD_TAG' environment variable.
 '''
 #!@duckscript
 
@@ -32,6 +34,7 @@ end
 
 set_env CONTAINER_BUILD_TAG ${input_tag}
 ''',
+# Parse and set 'CONTAINER_BUILD_PLATFORM' environment variable.
 '''
 #!@duckscript
 
@@ -54,6 +57,7 @@ end
 
 set_env CONTAINER_BUILD_PLATFORM ${input_platform}
 ''',
+# Parse and set 'BUILD_PACKAGE_NAME' environment variable.
 '''
 #!@duckscript
 
