--- a/Makefile.toml
+++ b/Makefile.toml
@@ -104,6 +104,15 @@ workspace = false
 command = "cargo"
 args = ["build", "--package=${BUILD_PACKAGE_NAME}"]
 
+## Build a package in the workspace for a specific target.
+[tasks.build-package-target]
+category = "core"
+description = "Build a package in the workspace for a specific target."
+workspace = false
+
+command = "cargo"
+args = ["build", "--package=${BUILD_PACKAGE_NAME}", "--target=${BUILD_TARGET}"]
+
 ## Build a package in the workspace in release mode.
 [tasks.build-package-release]
 category = "core"
@@ -121,6 +130,15 @@ workspace = false
 
 command = "cargo"
 args = ["build", "--package=fediproto-sync"]
+
+## Build fediproto-sync for a specific target.
+[tasks.build-fediproto-sync-target]
+category = "core"
+description = "Build fediproto-sync for a specific target."
+workspace = false
+
+command = "cargo"
+args = ["build", "--package=fediproto-sync", "--target=${BUILD_TARGET}"]
 
 ## Build fediproto-sync in release mode.
 [tasks.build-fediproto-sync-release]
