--- a/fediproto-sync-lib/Cargo.toml
+++ b/fediproto-sync-lib/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 license-file.workspace = true
 
 [dependencies]
+rand = "0.9.0"
 thiserror = "2.0.10"
 
 [target.'cfg(target_os = "linux")'.dependencies]
