--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -83,6 +83,32 @@
       "problemMatcher": []
     },
     {
+      "label": "Run tests",
+      "detail": "Runs tests for any package in the workspace",
+      "icon": {
+        "id": "beaker",
+        "color": "terminal.ansiMagenta"
+      },
+      "type": "process",
+      "command": "cargo",
+      "args": [
+        "make",
+        "test"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": true
+      },
+      "problemMatcher": []
+    },
+    {
       "label": "Run FediProto Sync",
       "detail": "Runs the application locally for testing.",
       "icon": {
