--- a/.github/workflows/git-town.yml
+++ b/.github/workflows/git-town.yml
@@ -1,6 +1,9 @@
 name: Git Town
 
 on:
+  push:
+    branches-ignore:
+      - 'dependabot/**'
   pull_request:
     branches-ignore: 
       - 'dependabot/**'
@@ -9,6 +12,8 @@ jobs:
   git-town:
     name: Display the branch stack
     runs-on: ubuntu-latest
+
+    if: ${{ !startsWith(github.head_ref, 'dependabot/') }}
 
     permissions:
       contents: read
