--- a/.github/workflows/create-container-image.yml
+++ b/.github/workflows/create-container-image.yml
@@ -34,18 +34,27 @@ jobs:
       - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
 
-      - name: "Log into container registry"
+      - name: "Log into GitHub container registry"
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: "Log into Smalls.Online Git container registry"
+        uses: docker/login-action@v3
+        with:
+          registry: git.smalls.online
+          username: ${{ secrets.SO_GIT_USERNAME }}
+          password: ${{ secrets.SO_GIT_TOKEN }}
+
       - name: "Generate Docker metadata"
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.actor }}/fediproto-sync
+          images: |
+            ghcr.io/${{ github.actor }}/fediproto-sync
+            git.smalls.online/${{ secrets.SO_GIT_USERNAME }}/fediproto-sync
           tags: |
             type=ref,event=tag
             type=ref,event=branch
