--- a/fediproto-sync/Cargo.toml
+++ b/fediproto-sync/Cargo.toml
@@ -49,6 +49,9 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 [target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
 tikv-jemallocator = { version = "0.6.0" }
 
+[target.'cfg(all(target_family = "unix", target_os = "macos"))'.dependencies]
+snmalloc-rs = { version = "0.3.8" }
+
 [build-dependencies]
 fediproto-sync-build-macros = { path = "../fediproto-sync-build-macros" }
 
