--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,48 +11,9 @@ permissions:
   packages: read
 
 jobs:
-  build:
-    name: Build project
-    runs-on: ubuntu-latest
-
-    env:
-      CARGO_TERM_COLOR: always
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Install dev libraries
-        shell: bash
-        run: |
-          sudo apt-get install -y libpq-dev libpq5 libsqlite3-dev libsqlite3-0
-
-      - name: Setup Rust
-        uses: actions-rust-lang/setup-rust-toolchain@v1
-        with:
-          toolchain: stable
-          rustflags: ""
-
-      - name: Install cargo-binstall
-        uses: cargo-bins/cargo-binstall@main
-
-      - name: Install cargo-make
-        shell: bash
-        run: | 
-          cargo binstall cargo-make --force
-
-      - name: Build project
-        shell: bash
-        run: |
-          cargo make build-fediproto-sync
-
   test:
     name: Test project
     runs-on: ubuntu-latest
-    needs:
-      build
 
     env:
       CARGO_TERM_COLOR: always
@@ -86,3 +47,43 @@ jobs:
         shell: bash
         run: |
           cargo make test
+
+  build:
+    name: Build project
+    runs-on: ubuntu-latest
+    needs:
+      test
+
+    env:
+      CARGO_TERM_COLOR: always
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install dev libraries
+        shell: bash
+        run: |
+          sudo apt-get install -y libpq-dev libpq5 libsqlite3-dev libsqlite3-0
+
+      - name: Setup Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+          rustflags: ""
+
+      - name: Install cargo-binstall
+        uses: cargo-bins/cargo-binstall@main
+
+      - name: Install cargo-make
+        shell: bash
+        run: | 
+          cargo binstall cargo-make --force
+
+      - name: Build project
+        shell: bash
+        run: |
+          cargo make build-fediproto-sync
+  
