--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,51 @@ package.edition = "2024"
 [profile.release]
 opt-level = "s"
 lto = true
+
+[workspace.dependencies]
+anyhow = "1.0.95"
+async-session = "3.0.0"
+atrium-api = "0.25.0"
+atrium-xrpc-client = "0.5.11"
+axum = { version = "0.8.1", features = ["macros"] }
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
+bytes = "1.10.0"
+chrono = { version = "0.4.39", features = ["serde"] }
+diesel = { version = "2.2.7", features = [
+    "32-column-tables",
+    "chrono",
+    "postgres",
+    "postgres_backend",
+    "r2d2",
+    "returning_clauses_for_sqlite_3_35",
+    "serde_json",
+    "sqlite",
+    "uuid",
+], default-features = false }
+diesel_migrations = { version = "2.2.0", features = ["postgres", "sqlite"] }
+dom_query = "0.13.1"
+dotenvy = "0.15.7"
+image = "0.25.5"
+ipld-core = "0.4.2"
+libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
+megalodon = "1.0.0"
+oauth2 = "4.4.2"
+once_cell = "1.20.3"
+openssl = { version = "0.10.71" }
+pq-sys = { version = "0.7.0", features = ["bundled"] }
+rand = "0.9.0"
+regex = { version = "1.11.1", features = ["std"] }
+reqwest = { version = "0.12.12", features = [
+    "json",
+    "rustls-tls",
+], default-features = false }
+rstest = "0.24.0"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
+snmalloc-rs = { version = "0.3.8" }
+thiserror = "2.0.10"
+tikv-jemallocator = { version = "0.6.0" }
+tokio = { version = "1.42.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+uuid = { version = "1.13.2", features = ["fast-rng", "v4", "v7"] }
